<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginFragment">

    <data>

        <import type="com.beatareka.jwtlogin.viewmodel.LoginViewModel" />

        <import type="com.beatareka.jwtlogin.view.binding.BindingConverter" />

        <variable
            name="viewmodel"
            type="com.beatareka.jwtlogin.viewmodel.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:elevation="@dimen/elevation"
            android:visibility="@{BindingConverter.booleanToVisibility(viewmodel.loading)}">

            <ProgressBar
                android:id="@+id/loading_view_id"
                android:layout_width="@dimen/loading_bar_size"
                android:layout_height="@dimen/loading_bar_size"
                android:layout_gravity="center"
                android:progressTint="@color/white" />
        </FrameLayout>

        <TextView
            android:id="@+id/hello_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_fragment_label"
            app:layout_constraintBottom_toTopOf="@id/username_edit_text_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding"
            android:layout_marginHorizontal="@dimen/base_padding"
            android:afterTextChanged="@{viewmodel::checkCanSend}"
            android:hint="@string/username"
            android:text="@={viewmodel.username}"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello_text_view_id" />

        <EditText
            android:id="@+id/password_edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding"
            android:layout_marginHorizontal="@dimen/base_padding"
            android:afterTextChanged="@{viewmodel::checkCanSend}"
            android:hint="@string/password"
            android:text="@={viewmodel.password}"
            android:password="true"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text_id" />

        <TextView
            android:id="@+id/error_message_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.error}"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text_id" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewmodel.canSend}"
            android:onClick="@{() -> viewmodel.login()}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>