...

        <TextView
            android:id="@+id/error_home_textview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.error}"
            app:layout_constraintBottom_toTopOf="@id/user_full_name_textview_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_full_name_textview_id"
...
